--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "react-webcam": "^5.2.1",
+    "resemblejs": "^3.2.5",
+    "web-vitals": "^0.2.4",
+    "webcam-easy": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
