--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-full-screen": "^0.3.1",
     "react-scripts": "4.0.0",
     "react-webcam": "^5.2.1",
     "resemblejs": "^3.2.5",
