--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-webcam": "^5.2.1",
     "resemblejs": "^3.2.5",
