--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "react-chatbot-kit": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
     "react-scripts": "4.0.0",
