chatbot updated and css

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
-    "react-confirm-alert": "^2.6.2",
     "react-chatbot-kit": "^1.1.0",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
+    "react-page-scroller": "^2.0.10-beta",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scrollbar": "^0.5.6",
     "react-webcam": "^5.2.1",
     "resemblejs": "^3.2.5",
     "speech-to-text": "^2.9.1",
