--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "face-api.js": "^0.22.2",
+    "ngx-face-api-js": "^0.1.1",
     "react": "^17.0.1",
     "react-chatbot-kit": "^1.1.0",
     "react-confirm-alert": "^2.6.2",
