--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anticheat_exam",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
